# cpp-clock

./: .gitignore  Animator.h  Block.h  CMakeLists.txt  ClockGUI.h  DayCycle.h  DigitalClockGUI.h  FutureGUI.h  Game.h  Image.h  Makefile  Makefile.LINUX  Readme.html  Readme.md  Readme.txt  WindowManager.cpp  WindowManager.h  main.cpp  under12.sh  under9.sh
.VSCodeCounter/2021-12-02_23-38-25/: details.md  results.csv  results.md  results.txt
.github/workflows/: web-deploy.yml
